--- a/main.html
+++ b/main.html
@@ -8,9 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+		<nav class="navbar">
+			<div>&lt</div>
+			<div>&gt</div>
+			<div>@</div>
+			<div>vpn</div>
+			<div>@</div>
+			<div>localhost:3000</div>
+		</nav>
+
+	<div>
+		<p id="counter">3</p>
+	</div>
+    <button class="btn" onclick="increment()" >Increment</button>
+
+	 <script type="text/javascript" src="./script.js">
+</script>
 </body>
 
 </html>
