--- a/main.html
+++ b/main.html
@@ -19,9 +19,9 @@
 		</nav>
 
 	<div>
-		<p id="counter">3</p>
+		<p id="counter">0</p>
 	</div>
-    <button class="btn" onclick="increment()" >Increment</button>
+    <button class="incrementBtn" onclick="increment()" >Increment</button>
 
 	 <script type="text/javascript" src="./script.js">
 </script>
